optimisation de code suite au retour de pylint

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -17,7 +17,7 @@ jobs:
       - name: run pylint
         run: |
           pipenv install pylint
-          pipenv run pylint app
+          pipenv run pylint wsgi.py
       - name: run nosetests
         run: |
           pipenv install nose
